Cleaned up syntax highlighting
Added S3 Push blog post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>{{ page.title }}</title>
-    
+
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
-  </head>
+    <link href="/css/syntax.css" rel="stylesheet">
+
+</head>
 
 
-  <body>
-    <nav>
-<ul>
-<li><a href="/">Home</a></li>
-<li><a href="/blog">Blog</a></li>
-</ul>
-    </nav>
+<body>
+<nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/blog">Blog</a></li>
+    </ul>
+</nav>
 <div class="container">
 
-  {{ content }}
+    {{ content }}
 
 </div>
-  
-  <footer>
-   <ul>
-   <li><a href="mailto:somesh.s.in@gmail.com">email</a></li>
-   <li><a href="https://github.com/someshsridhara">github.com/someshsridhara</a></li>
-   </ul>
-  </footer>
-  </body>
+
+<footer>
+    <ul>
+        <li><a href="mailto:somesh.s.in@gmail.com">email</a></li>
+        <li><a href="https://github.com/someshsridhara">github.com/someshsridhara</a></li>
+    </ul>
+</footer>
+</body>
 
 </html>
